Fix search on mobile

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -6,7 +6,6 @@
 .searchBarContainer input {
   border: none;
   border-bottom: solid 1px #000000;
-  padding: 15px 35px !important;
   height: 48px;
 }
 
