--- a/styles/css/vtex.store-header.css
+++ b/styles/css/vtex.store-header.css
@@ -17,6 +17,10 @@
   border-width: 1px;
 }
 
+.topMenuSearchBar button {
+  margin: 1rem 0;
+}
+
 @media screen and (min-width: 40em) {
   .topMenuContainer {
     height: 80px;
